posts renderizados no JSX usando map

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <title>Instagram</title>
+  <link rel="icon" type="image/jpg" href="assets/img/instagram_logo.png">
+  <title>Instagram</title> 
 </head>
 
 <body>
